src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones :
   3               | definiciones definicion

   4  definicion : defFuncion
   5             | defVar
   6             | defStruct

   7  defsVariablesLocales :
   8                       | defsVariablesLocales defVar

   9  defVar : "VAR" "IDENT" ':' tipo ';'

  10  defFuncion : "IDENT" '(' funOpParams ')' ':' tipo '{' defsVariablesLocales sentencias '}'
  11             | "IDENT" '(' funOpParams ')' '{' defsVariablesLocales sentencias '}'

  12  defStruct : "STRUCT" "IDENT" '{' camposStruct '}' ';'

  13  param : "IDENT" ':' tipo

  14  camposStruct :
  15               | camposStruct campoStruct

  16  campoStruct : param ';'

  17  funParams : param
  18            | funParams ',' param

  19  funOpParams :
  20              | funParams

  21  sentencias :
  22             | sentencias sentencia

  23  sentencia : "READ" expr ';'
  24            | "PRINT" expr ';'
  25            | "PRINTSP" expr ';'
  26            | "PRINTLN" expr ';'
  27            | "RETURN" expr ';'
  28            | "RETURN" ';'
  29            | "IF" '(' expr ')' '{' sentencias '}'
  30            | "IF" '(' expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'
  31            | "WHILE" '(' expr ')' '{' sentencias '}'
  32            | expr '=' expr ';'
  33            | "IDENT" '(' expresiones ')' ';'

  34  expr : "LITREAL"
  35       | "LITENT"
  36       | "IDENT"
  37       | "LITCHAR"
  38       | expr '+' expr
  39       | expr '-' expr
  40       | expr '*' expr
  41       | expr '/' expr
  42       | expr "MAYORIGUAL" expr
  43       | expr "IGUAL" expr
  44       | expr '<' expr
  45       | expr '>' expr
  46       | expr "MENORIGUAL" expr
  47       | expr "AND" expr
  48       | expr "OR" expr
  49       | expr "DISTINTO" expr
  50       | '!' expr
  51       | '(' expr ')'
  52       | "CAST" '<' tipo '>' '(' expr ')'
  53       | expr '[' expr ']'
  54       | expr '.' "IDENT"
  55       | "IDENT" '(' expresiones ')'

  56  expresiones : expr
  57              | expresiones ',' expr
  58              |

  59  tipo : "INT"
  60       | "FLOAT"
  61       | "CHAR"
  62       | "IDENT"
  63       | '[' "LITENT" ']' tipo

state 0
	$accept : . programa $end  (0)
	definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (3)

	"VAR"  shift 3
	"IDENT"  shift 4
	"STRUCT"  shift 5
	$end  reduce 1

	definicion  goto 6
	defFuncion  goto 7
	defVar  goto 8
	defStruct  goto 9


state 3
	defVar : "VAR" . "IDENT" ':' tipo ';'  (9)

	"IDENT"  shift 10
	.  error


state 4
	defFuncion : "IDENT" . '(' funOpParams ')' ':' tipo '{' defsVariablesLocales sentencias '}'  (10)
	defFuncion : "IDENT" . '(' funOpParams ')' '{' defsVariablesLocales sentencias '}'  (11)

	'('  shift 11
	.  error


state 5
	defStruct : "STRUCT" . "IDENT" '{' camposStruct '}' ';'  (12)

	"IDENT"  shift 12
	.  error


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : defFuncion .  (4)

	.  reduce 4


state 8
	definicion : defVar .  (5)

	.  reduce 5


state 9
	definicion : defStruct .  (6)

	.  reduce 6


state 10
	defVar : "VAR" "IDENT" . ':' tipo ';'  (9)

	':'  shift 13
	.  error


state 11
	defFuncion : "IDENT" '(' . funOpParams ')' ':' tipo '{' defsVariablesLocales sentencias '}'  (10)
	defFuncion : "IDENT" '(' . funOpParams ')' '{' defsVariablesLocales sentencias '}'  (11)
	funOpParams : .  (19)

	"IDENT"  shift 14
	')'  reduce 19

	funOpParams  goto 15
	param  goto 16
	funParams  goto 17


state 12
	defStruct : "STRUCT" "IDENT" . '{' camposStruct '}' ';'  (12)

	'{'  shift 18
	.  error


state 13
	defVar : "VAR" "IDENT" ':' . tipo ';'  (9)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 24


state 14
	param : "IDENT" . ':' tipo  (13)

	':'  shift 25
	.  error


state 15
	defFuncion : "IDENT" '(' funOpParams . ')' ':' tipo '{' defsVariablesLocales sentencias '}'  (10)
	defFuncion : "IDENT" '(' funOpParams . ')' '{' defsVariablesLocales sentencias '}'  (11)

	')'  shift 26
	.  error


state 16
	funParams : param .  (17)

	.  reduce 17


state 17
	funParams : funParams . ',' param  (18)
	funOpParams : funParams .  (20)

	','  shift 27
	')'  reduce 20


state 18
	defStruct : "STRUCT" "IDENT" '{' . camposStruct '}' ';'  (12)
	camposStruct : .  (14)

	.  reduce 14

	camposStruct  goto 28


state 19
	tipo : '[' . "LITENT" ']' tipo  (63)

	"LITENT"  shift 29
	.  error


state 20
	tipo : "IDENT" .  (62)

	.  reduce 62


state 21
	tipo : "INT" .  (59)

	.  reduce 59


state 22
	tipo : "FLOAT" .  (60)

	.  reduce 60


state 23
	tipo : "CHAR" .  (61)

	.  reduce 61


state 24
	defVar : "VAR" "IDENT" ':' tipo . ';'  (9)

	';'  shift 30
	.  error


state 25
	param : "IDENT" ':' . tipo  (13)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 31


state 26
	defFuncion : "IDENT" '(' funOpParams ')' . ':' tipo '{' defsVariablesLocales sentencias '}'  (10)
	defFuncion : "IDENT" '(' funOpParams ')' . '{' defsVariablesLocales sentencias '}'  (11)

	'{'  shift 32
	':'  shift 33
	.  error


state 27
	funParams : funParams ',' . param  (18)

	"IDENT"  shift 14
	.  error

	param  goto 34


state 28
	defStruct : "STRUCT" "IDENT" '{' camposStruct . '}' ';'  (12)
	camposStruct : camposStruct . campoStruct  (15)

	'}'  shift 35
	"IDENT"  shift 14
	.  error

	param  goto 36
	campoStruct  goto 37


state 29
	tipo : '[' "LITENT" . ']' tipo  (63)

	']'  shift 38
	.  error


state 30
	defVar : "VAR" "IDENT" ':' tipo ';' .  (9)

	.  reduce 9


state 31
	param : "IDENT" ':' tipo .  (13)

	.  reduce 13


state 32
	defFuncion : "IDENT" '(' funOpParams ')' '{' . defsVariablesLocales sentencias '}'  (11)
	defsVariablesLocales : .  (7)

	.  reduce 7

	defsVariablesLocales  goto 39


state 33
	defFuncion : "IDENT" '(' funOpParams ')' ':' . tipo '{' defsVariablesLocales sentencias '}'  (10)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 40


state 34
	funParams : funParams ',' param .  (18)

	.  reduce 18


state 35
	defStruct : "STRUCT" "IDENT" '{' camposStruct '}' . ';'  (12)

	';'  shift 41
	.  error


state 36
	campoStruct : param . ';'  (16)

	';'  shift 42
	.  error


state 37
	camposStruct : camposStruct campoStruct .  (15)

	.  reduce 15


state 38
	tipo : '[' "LITENT" ']' . tipo  (63)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 43


state 39
	defsVariablesLocales : defsVariablesLocales . defVar  (8)
	defFuncion : "IDENT" '(' funOpParams ')' '{' defsVariablesLocales . sentencias '}'  (11)
	sentencias : .  (21)

	"VAR"  shift 3
	'}'  reduce 21
	'('  reduce 21
	'!'  reduce 21
	"IDENT"  reduce 21
	"READ"  reduce 21
	"PRINT"  reduce 21
	"PRINTSP"  reduce 21
	"PRINTLN"  reduce 21
	"RETURN"  reduce 21
	"IF"  reduce 21
	"WHILE"  reduce 21
	"LITREAL"  reduce 21
	"LITENT"  reduce 21
	"LITCHAR"  reduce 21
	"CAST"  reduce 21

	defVar  goto 44
	sentencias  goto 45


state 40
	defFuncion : "IDENT" '(' funOpParams ')' ':' tipo . '{' defsVariablesLocales sentencias '}'  (10)

	'{'  shift 46
	.  error


state 41
	defStruct : "STRUCT" "IDENT" '{' camposStruct '}' ';' .  (12)

	.  reduce 12


state 42
	campoStruct : param ';' .  (16)

	.  reduce 16


state 43
	tipo : '[' "LITENT" ']' tipo .  (63)

	.  reduce 63


state 44
	defsVariablesLocales : defsVariablesLocales defVar .  (8)

	.  reduce 8


state 45
	defFuncion : "IDENT" '(' funOpParams ')' '{' defsVariablesLocales sentencias . '}'  (11)
	sentencias : sentencias . sentencia  (22)

	'}'  shift 47
	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 50
	"READ"  shift 51
	"PRINT"  shift 52
	"PRINTSP"  shift 53
	"PRINTLN"  shift 54
	"RETURN"  shift 55
	"IF"  shift 56
	"WHILE"  shift 57
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	sentencia  goto 62
	expr  goto 63


state 46
	defFuncion : "IDENT" '(' funOpParams ')' ':' tipo '{' . defsVariablesLocales sentencias '}'  (10)
	defsVariablesLocales : .  (7)

	.  reduce 7

	defsVariablesLocales  goto 64


state 47
	defFuncion : "IDENT" '(' funOpParams ')' '{' defsVariablesLocales sentencias '}' .  (11)

	.  reduce 11


state 48
	expr : '(' . expr ')'  (51)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 66


state 49
	expr : '!' . expr  (50)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 67


state 50
	sentencia : "IDENT" . '(' expresiones ')' ';'  (33)
	expr : "IDENT" .  (36)
	expr : "IDENT" . '(' expresiones ')'  (55)

	'('  shift 68
	"DISTINTO"  reduce 36
	"IGUAL"  reduce 36
	"MAYORIGUAL"  reduce 36
	"MENORIGUAL"  reduce 36
	'>'  reduce 36
	'<'  reduce 36
	"AND"  reduce 36
	"OR"  reduce 36
	'+'  reduce 36
	'-'  reduce 36
	'*'  reduce 36
	'/'  reduce 36
	'['  reduce 36
	'.'  reduce 36
	'='  reduce 36


state 51
	sentencia : "READ" . expr ';'  (23)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 69


state 52
	sentencia : "PRINT" . expr ';'  (24)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 70


state 53
	sentencia : "PRINTSP" . expr ';'  (25)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 71


state 54
	sentencia : "PRINTLN" . expr ';'  (26)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 72


state 55
	sentencia : "RETURN" . expr ';'  (27)
	sentencia : "RETURN" . ';'  (28)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	';'  shift 73
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 74


state 56
	sentencia : "IF" . '(' expr ')' '{' sentencias '}'  (29)
	sentencia : "IF" . '(' expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (30)

	'('  shift 75
	.  error


state 57
	sentencia : "WHILE" . '(' expr ')' '{' sentencias '}'  (31)

	'('  shift 76
	.  error


state 58
	expr : "LITREAL" .  (34)

	.  reduce 34


state 59
	expr : "LITENT" .  (35)

	.  reduce 35


state 60
	expr : "LITCHAR" .  (37)

	.  reduce 37


state 61
	expr : "CAST" . '<' tipo '>' '(' expr ')'  (52)

	'<'  shift 77
	.  error


state 62
	sentencias : sentencias sentencia .  (22)

	.  reduce 22


state 63
	sentencia : expr . '=' expr ';'  (32)
	expr : expr . '+' expr  (38)
	expr : expr . '-' expr  (39)
	expr : expr . '*' expr  (40)
	expr : expr . '/' expr  (41)
	expr : expr . "MAYORIGUAL" expr  (42)
	expr : expr . "IGUAL" expr  (43)
	expr : expr . '<' expr  (44)
	expr : expr . '>' expr  (45)
	expr : expr . "MENORIGUAL" expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . "DISTINTO" expr  (49)
	expr : expr . '[' expr ']'  (53)
	expr : expr . '.' "IDENT"  (54)

	"DISTINTO"  shift 78
	"IGUAL"  shift 79
	"MAYORIGUAL"  shift 80
	"MENORIGUAL"  shift 81
	'>'  shift 82
	'<'  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	'['  shift 90
	'.'  shift 91
	'='  shift 92
	.  error


state 64
	defsVariablesLocales : defsVariablesLocales . defVar  (8)
	defFuncion : "IDENT" '(' funOpParams ')' ':' tipo '{' defsVariablesLocales . sentencias '}'  (10)
	sentencias : .  (21)

	"VAR"  shift 3
	'}'  reduce 21
	'('  reduce 21
	'!'  reduce 21
	"IDENT"  reduce 21
	"READ"  reduce 21
	"PRINT"  reduce 21
	"PRINTSP"  reduce 21
	"PRINTLN"  reduce 21
	"RETURN"  reduce 21
	"IF"  reduce 21
	"WHILE"  reduce 21
	"LITREAL"  reduce 21
	"LITENT"  reduce 21
	"LITCHAR"  reduce 21
	"CAST"  reduce 21

	defVar  goto 44
	sentencias  goto 93


state 65
	expr : "IDENT" .  (36)
	expr : "IDENT" . '(' expresiones ')'  (55)

	'('  shift 94
	')'  reduce 36
	"DISTINTO"  reduce 36
	"IGUAL"  reduce 36
	"MAYORIGUAL"  reduce 36
	"MENORIGUAL"  reduce 36
	'>'  reduce 36
	'<'  reduce 36
	"AND"  reduce 36
	"OR"  reduce 36
	'+'  reduce 36
	'-'  reduce 36
	'*'  reduce 36
	'/'  reduce 36
	'['  reduce 36
	']'  reduce 36
	'.'  reduce 36
	','  reduce 36
	';'  reduce 36
	'='  reduce 36


state 66
	expr : expr . '+' expr  (38)
	expr : expr . '-' expr  (39)
	expr : expr . '*' expr  (40)
	expr : expr . '/' expr  (41)
	expr : expr . "MAYORIGUAL" expr  (42)
	expr : expr . "IGUAL" expr  (43)
	expr : expr . '<' expr  (44)
	expr : expr . '>' expr  (45)
	expr : expr . "MENORIGUAL" expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . "DISTINTO" expr  (49)
	expr : '(' expr . ')'  (51)
	expr : expr . '[' expr ']'  (53)
	expr : expr . '.' "IDENT"  (54)

	')'  shift 95
	"DISTINTO"  shift 78
	"IGUAL"  shift 79
	"MAYORIGUAL"  shift 80
	"MENORIGUAL"  shift 81
	'>'  shift 82
	'<'  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	'['  shift 90
	'.'  shift 91
	.  error


state 67
	expr : expr . '+' expr  (38)
	expr : expr . '-' expr  (39)
	expr : expr . '*' expr  (40)
	expr : expr . '/' expr  (41)
	expr : expr . "MAYORIGUAL" expr  (42)
	expr : expr . "IGUAL" expr  (43)
	expr : expr . '<' expr  (44)
	expr : expr . '>' expr  (45)
	expr : expr . "MENORIGUAL" expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . "DISTINTO" expr  (49)
	expr : '!' expr .  (50)
	expr : expr . '[' expr ']'  (53)
	expr : expr . '.' "IDENT"  (54)

	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	'['  shift 90
	'.'  shift 91
	')'  reduce 50
	"DISTINTO"  reduce 50
	"IGUAL"  reduce 50
	"MAYORIGUAL"  reduce 50
	"MENORIGUAL"  reduce 50
	'>'  reduce 50
	'<'  reduce 50
	"AND"  reduce 50
	"OR"  reduce 50
	']'  reduce 50
	','  reduce 50
	';'  reduce 50
	'='  reduce 50


state 68
	sentencia : "IDENT" '(' . expresiones ')' ';'  (33)
	expr : "IDENT" '(' . expresiones ')'  (55)
	expresiones : .  (58)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	')'  reduce 58
	','  reduce 58

	expr  goto 96
	expresiones  goto 97


state 69
	sentencia : "READ" expr . ';'  (23)
	expr : expr . '+' expr  (38)
	expr : expr . '-' expr  (39)
	expr : expr . '*' expr  (40)
	expr : expr . '/' expr  (41)
	expr : expr . "MAYORIGUAL" expr  (42)
	expr : expr . "IGUAL" expr  (43)
	expr : expr . '<' expr  (44)
	expr : expr . '>' expr  (45)
	expr : expr . "MENORIGUAL" expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . "DISTINTO" expr  (49)
	expr : expr . '[' expr ']'  (53)
	expr : expr . '.' "IDENT"  (54)

	"DISTINTO"  shift 78
	"IGUAL"  shift 79
	"MAYORIGUAL"  shift 80
	"MENORIGUAL"  shift 81
	'>'  shift 82
	'<'  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	'['  shift 90
	'.'  shift 91
	';'  shift 98
	.  error


state 70
	sentencia : "PRINT" expr . ';'  (24)
	expr : expr . '+' expr  (38)
	expr : expr . '-' expr  (39)
	expr : expr . '*' expr  (40)
	expr : expr . '/' expr  (41)
	expr : expr . "MAYORIGUAL" expr  (42)
	expr : expr . "IGUAL" expr  (43)
	expr : expr . '<' expr  (44)
	expr : expr . '>' expr  (45)
	expr : expr . "MENORIGUAL" expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . "DISTINTO" expr  (49)
	expr : expr . '[' expr ']'  (53)
	expr : expr . '.' "IDENT"  (54)

	"DISTINTO"  shift 78
	"IGUAL"  shift 79
	"MAYORIGUAL"  shift 80
	"MENORIGUAL"  shift 81
	'>'  shift 82
	'<'  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	'['  shift 90
	'.'  shift 91
	';'  shift 99
	.  error


state 71
	sentencia : "PRINTSP" expr . ';'  (25)
	expr : expr . '+' expr  (38)
	expr : expr . '-' expr  (39)
	expr : expr . '*' expr  (40)
	expr : expr . '/' expr  (41)
	expr : expr . "MAYORIGUAL" expr  (42)
	expr : expr . "IGUAL" expr  (43)
	expr : expr . '<' expr  (44)
	expr : expr . '>' expr  (45)
	expr : expr . "MENORIGUAL" expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . "DISTINTO" expr  (49)
	expr : expr . '[' expr ']'  (53)
	expr : expr . '.' "IDENT"  (54)

	"DISTINTO"  shift 78
	"IGUAL"  shift 79
	"MAYORIGUAL"  shift 80
	"MENORIGUAL"  shift 81
	'>'  shift 82
	'<'  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	'['  shift 90
	'.'  shift 91
	';'  shift 100
	.  error


state 72
	sentencia : "PRINTLN" expr . ';'  (26)
	expr : expr . '+' expr  (38)
	expr : expr . '-' expr  (39)
	expr : expr . '*' expr  (40)
	expr : expr . '/' expr  (41)
	expr : expr . "MAYORIGUAL" expr  (42)
	expr : expr . "IGUAL" expr  (43)
	expr : expr . '<' expr  (44)
	expr : expr . '>' expr  (45)
	expr : expr . "MENORIGUAL" expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . "DISTINTO" expr  (49)
	expr : expr . '[' expr ']'  (53)
	expr : expr . '.' "IDENT"  (54)

	"DISTINTO"  shift 78
	"IGUAL"  shift 79
	"MAYORIGUAL"  shift 80
	"MENORIGUAL"  shift 81
	'>'  shift 82
	'<'  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	'['  shift 90
	'.'  shift 91
	';'  shift 101
	.  error


state 73
	sentencia : "RETURN" ';' .  (28)

	.  reduce 28


state 74
	sentencia : "RETURN" expr . ';'  (27)
	expr : expr . '+' expr  (38)
	expr : expr . '-' expr  (39)
	expr : expr . '*' expr  (40)
	expr : expr . '/' expr  (41)
	expr : expr . "MAYORIGUAL" expr  (42)
	expr : expr . "IGUAL" expr  (43)
	expr : expr . '<' expr  (44)
	expr : expr . '>' expr  (45)
	expr : expr . "MENORIGUAL" expr  (46)
	expr : expr . "AND" expr  (47)
	expr : expr . "OR" expr  (48)
	expr : expr . "DISTINTO" expr  (49)
	expr : expr . '[' expr ']'  (53)
	expr : expr . '.' "IDENT"  (54)

	"DISTINTO"  shift 78
	"IGUAL"  shift 79
	"MAYORIGUAL"  shift 80
	"MENORIGUAL"  shift 81
	'>'  shift 82
	'<'  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	'['  shift 90
	'.'  shift 91
	';'  shift 102
	.  error


state 75
	sentencia : "IF" '(' . expr ')' '{' sentencias '}'  (29)
	sentencia : "IF" '(' . expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (30)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 103


state 76
	sentencia : "WHILE" '(' . expr ')' '{' sentencias '}'  (31)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 104


state 77
	expr : "CAST" '<' . tipo '>' '(' expr ')'  (52)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 105


state 78
	expr : expr "DISTINTO" . expr  (49)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 106


state 79
	expr : expr "IGUAL" . expr  (43)

	'('  shift 48
	'!'  shift 49
	"IDENT"  shift 65
	"LITREAL"  shift 58
	"LITENT"  shift 59
	"LITCHAR"  shift 60
	"CAST"  shift 61
	.  error

	expr  goto 107


state 80
	expr : expr "MAYORIGUAL" . expr  (42)
